[package]
name = "rust-multiplayer-test"
version = "0.1.0"
edition = "2021"

[dependencies]
laminar = "0.5"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.1"
macroquad = "0.4.0"
console_error_panic_hook = "0.1.7"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
